# retrovue-air

./: BUILD_CONTRACTS.sh  CMakeLists.txt  CMakePresets.json  COMMIT_MSG.txt  INSTALL_VCPKG_PACKAGES.sh  PHASE3_PART2_COMPLETE.md  README.md
docs/: INDEX.md  PROJECT_OVERVIEW.md  README.md
docs/air/contracts/: MpegTSPlayoutSinkTimingContract.md
docs/contracts/: MetricsExportDomainContract.md  MpegTSPlayoutSinkDomainContract.md  MpegTSPlayoutSinkTimingContract.md  OrchestrationLoopDomainContract.md  PlayoutControlDomainContract.md  PlayoutEngineContract.md  PlayoutEngineDomainContract.md  RendererContract.md
docs/domain/: MetricsAndTimingContract.md  MetricsExportDomain.md  MpegTSPlayoutSinkDomain.md  OrchestrationLoopDomain.md  PlayoutControlDomain.md  PlayoutDomainContract.md  PlayoutEngineDomain.md  RendererAndHTTP.md  RendererDomain.md
docs/milestones/: Phase1_Skeleton.md  Phase2_Complete.md  Phase2_Plan.md  Phase3_Complete.md  Phase3_Completion.md  Phase3_FFmpeg.md  Phase3_Part2_Complete.md  Phase3_Plan.md  Refactoring_Complete.md  Roadmap.md
docs/milestones/archive/: Phase3_FFmpeg_Details.md  Phase3_Renderer_Details.md  README.md  Refactoring_Complete.md
docs/runtime/: PlayoutRuntime.md  phase6.md
docs/telemetry/: README.md
docs/telemetry/grafana/: Timing.json
docs/testing/: PlayoutTestContract.md
docs/tests/: TimingScenarios.md
include/retrovue/buffer/: FrameRingBuffer.h
include/retrovue/decode/: FFmpegDecoder.h  FrameProducer.h
include/retrovue/playout_sinks/: IPlayoutSink.h
include/retrovue/playout_sinks/mpegts/: ClockUtils.hpp  EncoderPipeline.hpp  MpegTSEncoder.h  MpegTSPlayoutSink.h  MpegTSPlayoutSink.hpp  MpegTSPlayoutSinkConfig.hpp  PTSController.hpp  SinkConfig.h  SinkStats.h  TSMuxer.h
include/retrovue/producers/: IProducer.h
include/retrovue/producers/video_file/: VideoFileProducer.h
include/retrovue/renderer/: FrameRenderer.h
include/retrovue/runtime/: OrchestrationLoop.h  PlayoutControlStateMachine.h  ProducerSlot.h
include/retrovue/telemetry/: MetricsExporter.h  MetricsHTTPServer.h
include/retrovue/timing/: MasterClock.h
scripts/: build_and_test_contracts.sh  quick_check_and_build.sh  test_metrics.ps1  test_metrics.sh  wait_and_build_contracts.sh
src/: main.cpp  playout_service.cpp  playout_service.h
src/buffer/: FrameRingBuffer.cpp
src/decode/: FFmpegDecoder.cpp  FrameProducer.cpp
src/playout_sinks/mpegts/: ClockUtils.cpp  EncoderPipeline.cpp  MpegTSEncoder.cpp  MpegTSPlayoutSink.cpp  PTSController.cpp  TSMuxer.cpp
src/producers/video_file/: VideoFileProducer.cpp
src/renderer/: FrameRenderer.cpp
src/runtime/: OrchestrationLoop.cpp  PlayoutControlStateMachine.cpp
src/telemetry/: MetricsExporter.cpp  MetricsHTTPServer.cpp
src/timing/: SystemMasterClock.cpp  TestMasterClock.cpp  TestMasterClock.h
tests/contracts/: ContractRegistryEnvironment.cpp  ContractRegistrySanityTest.cpp
tests/contracts/MasterClock/: MasterClockContractTests.cpp
tests/contracts/MetricsAndTiming/: MT_006_FeedbackConvergence.cpp  MetricsAndTimingContractTests.cpp
tests/contracts/MetricsExport/: MetricsExportContractTests.cpp
tests/contracts/MpegTSPlayoutSink/: MpegTSPlayoutSinkContractTests.cpp
tests/contracts/OrchestrationLoop/: OrchestrationLoopContractTests.cpp
tests/contracts/PlayoutControl/: PlayoutControlContractTests.cpp
tests/contracts/PlayoutEngine/: PlayoutEngineContractTests.cpp
tests/fixtures/: ChannelManagerStub.h
tests/fixtures/media/: README.md
tests/fixtures/mpegts_sink/: FrameFactory.h  StubEncoder.h  StubEncoderPipeline.h  StubMuxer.h  TestTcpClient.h
tests/integration/: FrameCadenceIntegrationTests.cpp
tests/python/: test_metrics_and_timing.py
tools/soak/: TimingSoak.cpp
